<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:layout_gravity="center_horizontal"
    android:fillViewport="true">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#1C99E0">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="17dp"
            android:text="LibreOffice incluye las siguientes aplicaciones:" />

    <ImageView
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_gravity="right"
        android:layout_marginTop="85dp"
        android:src="@drawable/writer_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="30dp"
        android:justificationMode="inter_word"
        android:text="@string/slide_3_desc"
        android:textColor="@android:color/white"
        android:textSize="14dp" />

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageView
            android:layout_width="68dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:gravity="right"
            android:src="@drawable/calc_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:justificationMode="inter_word"
            android:text="@string/slide_4_desc"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">


            <ImageView
                android:layout_width="68dp"
                android:layout_height="52dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:gravity="right"
                android:src="@drawable/impress_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="30dp"
                android:justificationMode="inter_word"
                android:text="@string/slide_5_desc"
                android:textColor="@android:color/white"
                android:textSize="14dp" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>